[tool.poetry]
name = "nionctl"
version = "0.2.4.2"
description = ""
authors = ["8Dion8 <shvartserinfo@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nionctl = "nionctl.main:main_app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
